--- a/post_postrm/dynusers.bash.in
+++ b/post_postrm/dynusers.bash.in
@@ -13,5 +13,4 @@ scriptdir=@datadir@/${package}
 . "${scriptdir}/common/config.sh"
 
 # Remove only the first instance of CATEGORY/PF from the db files
-sed -i /^${CATEGORY}\\/${PF}\$/\{x\;/Y/\!\{s/^/Y/\;h\;d\}\;x\;\} \
-	"${DBDIR}"/{users,groups}/*
+${scriptdir}/db.sh del "${CATEGORY}/${PF}"
